# OpenGlucose

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  openglucose.appdata.xml  openglucose.desktop
data/: 60-insulinx.rules  60-openglucose.rules  insulinx-log-parser.py  insulinx.csv
data/insulinx/: export.csv  parser.py
jqplot/: jquery.js
m4/: Makefile.am  linker.m4  tp-linker-flag.m4
src/: Makefile.am  average-chart.js  base-device.c  base-device.h  chart.html  device-info.c  device-info.h  device-widget.c  device-widget.h  dummy-device.c  dummy-device.h  insulinx.c  insulinx.h  main-window.c  main-window.css  main-window.h  main-window.html  main-window.js  main.c  modal-day-chart.js  openglucose.css  openglucose.gresource.xml  record.c  record.h
